--- a/src/changelog.txt
+++ b/src/changelog.txt
@@ -1,3 +1,10 @@
+3.17
+--
+- Modified permission system
+- Added "km" alias for killermoney command
+- Fixed KillerMoney command permissions
+- Removed unused random number function
+
 3.16
 --
 - Added Custom command chance settings
