--- a/src/changelog.txt
+++ b/src/changelog.txt
@@ -1,2 +1,6 @@
 4.0.0
 ---
+- (Added) Action bar message method
+- (Added) Limit
+- (Modify) Using semver versioning schema
+- (Modify) Changed mcstats to bstats
