--- a/src/changelog.txt
+++ b/src/changelog.txt
@@ -1,6 +1,22 @@
 4.0.0
 ---
 - (Added) Action bar message method
-- (Added) Limit
-- (Modify) Using semver versioning schema
-- (Modify) Changed mcstats to bstats
+- (Added) Money, item and command execution limit
+- (Added) Money item drop
+- (Added) Money, item and command execution setup possibility / world
+- (Added) "Enabled" options in entities config
+- (Added) Random amount for item drop
+- (Added) Run method (ALL or RANDOM)
+- (Added) Division mode (LAST_HIT or SHARED)
+- (Added) Rational number usage in chance and multiplier permissions
+- (Added) Permission setup for money, items, commands
+- (Added) Permissions for money multiplier and limit bypass
+- (Added) /km multiplier command
+- (Added) /km limit command
+- (Modified) Using semver versioning schema
+- (Modified) Changed mcstats to bstats
+- (Modified) Default config, entities config and language config structure
+- (Removed) Integrated translations
+- (Removed) Reward when a player falled into void
+- (Removed) "Lose" section in player entity (It will be available later)
+- (Removed) Modded server support
