--- a/src/changelog.txt
+++ b/src/changelog.txt
@@ -2,7 +2,8 @@
 ---
 - (Added) "Anyone-can-pick-it-up" option for money item drop in config
 - (Added) Built-in versioning system for better plugin update
-- (Modification) Changed values in default config: "Disable-spawner-egg-farming: false" and "Allowed-gamemodes: SURVIVAL, CREATIVE"
+- (Added) Minimal API (WIP)
+- (Modified) Changed values in default config: "Disable-spawner-egg-farming: false" and "Allowed-gamemodes: SURVIVAL, CREATIVE"
 - (Fixed) Major money and limit multiplier bug
 
 4.0.2
