Fix invalid import

--- a/src/changelog.txt
+++ b/src/changelog.txt
@@ -1,3 +1,7 @@
+4.1.1
+---
+- (Fixed) Config loading when the server is not spigot or spigot fork
+
 4.1.0
 ---
 - (Added) Minecraft 1.12 support (Added parrot and ACTION_BAR compatibility)
