--- a/src/changelog.txt
+++ b/src/changelog.txt
@@ -1,3 +1,7 @@
+4.2.0
+---
+- (Added) "DISABLED" option for Message-method in config
+
 4.1.2
 ---
 - (Fixed) When killer left the server and any other player want pick up money item then the server drop null pointer exception
