--- a/src/changelog.txt
+++ b/src/changelog.txt
@@ -5,6 +5,7 @@
 - (Added) Player config file for future updates
 - (Modification) Admin commands -> /kmadmin, players command -> /km
 - (Modification) Changed few string id in language file
+- (Modification) Hopper cannot pickup money item anymore
 
 4.1.2
 ---
