--- a/src/changelog.txt
+++ b/src/changelog.txt
@@ -6,6 +6,7 @@
 - (Modification) Admin commands -> /kmadmin, players command -> /km
 - (Modification) Changed few string id in language file
 - (Modification) Hopper cannot pickup money item anymore
+- (Fixed) Division-method in player cash transfer section
 
 4.1.2
 ---
